hphp/hack/test/typecheck/memoize/tuple_of_bad_class2.php
<?hh

class Bar {}

<<__Memoize>>
function some_function((int, Bar, string) $tup): void {}
